# plonky2_poseidon2

./: Cargo.toml  README.md
benches/: circuit_hash.rs  poseidon2_perm.rs
benches/circuits/: mod.rs
src/: lib.rs
src/config/: mod.rs
src/gate/: mod.rs  poseidon2.rs
src/poseidon2_hash/: mod.rs  poseidon2.rs  poseidon2_goldilocks.rs
